cmake_minimum_required(VERSION 3.13)
project(Final_Project)

set(CMAKE_CXX_STANDARD 11)

add_executable(Final_Project main.cpp Space.cpp Space.hpp Game.cpp Game.hpp MysterySpace.cpp MysterySpace.hpp DangerSpace.cpp DangerSpace.cpp ItemSpace.cpp
        ItemSpace.hpp Item.cpp Item.hpp Berries.cpp Berries.hpp Wood.cpp Wood.hpp Knife.cpp Knife.hpp)